src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/C4A04.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A04 {
  class A;
  class B;
  interface A1;
  class B1;
  enum C;
  class C1;
}