src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A05.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A05 {
  interface i;
  class c;
  enum e;
}
